--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div> 
                  
             <div class="col-sm-10" >
-                <h1>Major and Minor Scale and Key Look Up Application</h1>
+                <h1>Major and Minor Scale Look Up Application</h1>
 
             </div> 
     
